--- a/src/Components/Layout/Content/About/Services/Services.css
+++ b/src/Components/Layout/Content/About/Services/Services.css
@@ -2,3 +2,10 @@
   margin-top: 52px;
   margin-right: 10px;
 }
+
+
+@media (max-width: 1500px) and (min-width: 1001px) {
+  .services-services {
+    margin-right: 20px;
+  }
+}
